<resources>
    <string name="app_name">Cuvva Test</string>
    <string name="home_active_policies_title">Active Policies</string>
    <string name="home_vehicles">Vehicles</string>
    <string name="home_reg_plate">Reg plate</string>
    <string name="total_policies_title">Total policies</string>
    <string name="extend_button">Extend</string>
    <string name="insure_button">Insure</string>
    <string name="remaining_time">%1$s minutes remaining</string>
    <string name="motor_button_label">Motor</string>
    <string name="travel_button_label">Travel</string>
    <string name="vehicle_screen_active_driving_policy">Active driving policy</string>
    <string name="vehicle_previous_driving_policies">Previous driving policies</string>
    <string name="vehicle_profile_title">Vehicle profile</string>
    <string name="vehicle_active_policy">Active policy</string>
    <string name="vehicle_time_remaining">Time remaining</string>
    <string name="vehicle_mins">mins</string>
    <string name="vehicle_policy_button">Policy</string>
    <string name="vehicle_get_help_button">Get help</string>
    <string name="vehicle_extend_cover_button">Extend cover</string>
    <string name="there_s_no_active_policy_at_the_moment">There\'s no active policy at the moment</string>
    <string name="previous_voided">Voided</string>
    <string name="duration_of_policy">%1$s minutes</string>
    <string name="create_new_policy">Create new policy</string>
    <string name="receipt_voided_message">This policy has been voided</string>
    <string name="receipt_insurance_premium">Insurance premium</string>
    <string name="receipt_value_positive">£%1$s</string>
    <string name="receipt_value_negative">-£%1$s</string>
    <string name="receipt_insurance_premium_tax">Insurance premium tax</string>
    <string name="receipt_admin_fee">Admin fee</string>
    <string name="receipt_total_paid">Total paid</string>
    <string name="receipt_grand_total">Grand total</string>
    <string name="two_decimal_format">%.2f</string>
    <string name="generic_error">Something went wrong. Please try again.</string>
    <string name="refreshed_data_message">Data is refreshed.</string>
</resources>
